releases/R2025a/templates/mainTemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "Server VM Instance Size": {
            "defaultValue": "Standard_D4_v3",
            "type": "String",
            "metadata": {
                "description": "Specify the size of the VM you want to use for deploying the server."
            }
        },
        "Operating System": {
            "defaultValue": "Windows",
            "allowedValues": [
                "Windows",
                "Linux"
            ],
            "type": "String",
            "metadata": {
                "description": "Choose between Windows or Linux."
            }
        },
        "Deploy to New or Existing Virtual Network": {
            "defaultValue": "new",
            "allowedValues": [
                "new",
                "existing"
            ],
            "type": "String",
            "metadata": {
                "description": "Select whether you want to deploy the server to a new virtual network or an existing one."
            }
        },
        "Name of Virtual Network Where MATLAB Web App Server Will Be Deployed": {
            "defaultValue": "webapp-refarch-vnet",
            "type": "String",
            "metadata": {
                "description": "Specify the name of the virtual network where the server will be deployed. If deploying to a new virtual network, a new virtual network will created with this name. If deploying to an existing virtual network, this name must match the name of an existing virtual network. For example: webappserver-vnet."
            }
        },
        "Resource Group Name Of Virtual Network": {
            "defaultValue": "[resourceGroup().name]",
            "type": "String",
            "metadata": {
                "description": "Specify the name of the Azure resource group if you are deploying to an existing virtual network. If deploying to a new virtual network, keep the value as default resourceGroup().name, which indicates the resource group of this deployment. If deploying to an existing virtual network, this must match the resource group of the existing virtual network specified. For example: webappserver_rsg."
            }
        },
        "Virtual Network CIDR Range": {
            "defaultValue": "10.0.0.0/16",
            "type": "String",
            "metadata": {
                "description": "Specify the virtual network CIDR range. For example: 10.0.0.0/16 . If deploying to a new virtual network, specify a suitable CIDR range to be used for the new virtual network. If deploying to an existing virtual network, this must match the CIDR range of the existing virtual network specified."
            }
        },
        "Name of Subnet for MATLAB Web App Server": {
            "defaultValue": "default",
            "type": "String",
            "metadata": {
                "description": "Specify the name of the subnet that the server can use. If deploying to a new virtual network, this specifies the name of the subnet to be created in the virtual network. If deploying to an existing virtual network, this must match the name of a subnet in the existing virtual network specified."
            }
        },
        "Server Subnet CIDR Range": {
            "defaultValue": "10.0.0.0/24",
            "type": "String",
            "metadata": {
                "description": "Specify subnet CIDR range. This is a CIDR range for the subnet specified above. For example: 10.0.0.0/24 . If deploying to a new virtual network, specify a suitable CIDR range to be used for the new subnet. If deploying to an existing virtual network, this must match the CIDR range of the existing subnet specified."
            }
        },
        "Specify Private IP Address to VM Hosting MATLAB Web App Server": {
            "defaultValue": "10.0.0.4",
            "type": "String",
            "metadata": {
                "description": "Specify an unused private IP address to be assigned to the VM hosting the server. For example: 10.0.0.4 ."
            }
        },
        "Assign Public IP Address to VM Hosting MATLAB Web App Server": {
            "defaultValue": "Yes",
            "allowedValues": [
                "Yes",
                "No"
            ],
            "type": "String",
            "metadata": {
                "description": "Select whether you want to assign a public IP address to the VM hosting the server."
            }
        },
        "IP Addresses Permitted to Remote into Server VM in CIDR Notation": {
            "type": "String",
            "metadata": {
                "description": "Specify the range of IP addresses in CIDR notation that can remote into the VM hosting MATLAB Web App Server and administer it. For example: 192.168.1.0/24. This can be a comma-separated list of CIDR ranges (no spaces). For example: 192.168.1.0/24,10.0.0.0/8,172.16.0.0/16."
            }
        },
        "IP Addresses Allowed to Access MATLAB Web App Server Apps Home Page in CIDR Notation": {
            "type": "String",
            "metadata": {
                "description": "Specify the range of IP addresses in CIDR notation that can access the MATLAB Web App Server apps home page. For example: 192.168.1.0/24. This can be a comma-separated list of CIDR ranges (no spaces). For example: 192.168.1.0/24,10.0.0.0/8,172.16.0.0/16."
            }
        },
        "Base64 Encoded SSL Certificate": {
            "type": "String",
            "metadata": {
                "description": "Enter a string that is a base64-encoded value of an SSL certificate in PEM format."
            }
        },
        "Base64 Encoded SSL Private Key": {
            "type": "SecureString",
            "metadata": {
                "description": "Enter a string that is a base64-encoded value of an SSL private key file in PEM format."
            }
        },
        "Username to Remote into Server VM and Network License Manager Web Interface": {
            "type": "String",
            "metadata": {
                "description": "Specify a username to use when remoting into server VM hosting MATLAB Web App Server. This username is also used to login to the network license manager portal. For example: webappadmin. You cannot use \"admin\" as a username."
            }
        },
        "Password to Remote into Server VM and Network License Manager Web Interface": {
            "type": "SecureString",
            "metadata": {
                "description": "Specify a password to use when remoting into server VM hosting MATLAB Web App Server. This password is also used to login to the network license manager portal."
            }
        },
        "Deploy Network License Manager For MATLAB": {
            "defaultValue": "Yes",
            "allowedValues": [
                "Yes",
                "No"
            ],
            "type": "String",
            "metadata": {
                "description": "Select whether you want to deploy a network license manager or not."
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
              "description": "Location for all resources. This is automatically set to the resource group location. Do not change."
            }
        }
    },
    "variables": {
        "providerID": "D36A3EDC-0566-4EE4-86D3-64F20D2DDA06",
        "vmName": "webapp-vm",
        "usePublicIPAddresses": "[parameters('Assign Public IP Address to VM Hosting MATLAB Web App Server')]",
        "addressPrefix": "[parameters('Virtual Network CIDR Range')]",
        "serverPrivateIP": "[parameters('Specify Private IP Address to VM Hosting MATLAB Web App Server')]",
        "serverPublicIP": "webapp-public-ip",
        "publicIPprop1": {
            "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('serverPublicIP'))]"
        },
        "webappDNSName": "[concat('webapp',uniqueString(resourceGroup().id))]",
        "networkInterfaceName": "webapp-nic",
        "virtualNetworkID": "[resourceId(variables('virtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
        "virtualNetworkResourceGroup": "[parameters('Resource Group Name Of Virtual Network')]",
        "virtualNetworkName": "[parameters('Name of Virtual Network Where MATLAB Web App Server Will Be Deployed')]",
        "subnetName": "[parameters('Name of Subnet for MATLAB Web App Server')]",
        "subnetIP": "[parameters('Server Subnet CIDR Range')]",
        "subnetRef": "[resourceId(variables('virtualNetworkResourceGroup'),'Microsoft.Network/virtualNetworks/subnets',variables('virtualNetworkName'),variables('subnetName'))]",
        "networkSecurityGroupName": "webapp-nsg",
        "adminIP": "[split(parameters('IP Addresses Permitted to Remote into Server VM in CIDR Notation'), ',')]",
        "adminSingleIP": "[if(endsWith(variables('adminIP')[0], '/32'), substring(variables('adminIP')[0], 0, sub(length(variables('adminIP')[0]), 3)), variables('adminIP')[0])]",
        "clientIP": "[split(parameters('IP Addresses Allowed to Access MATLAB Web App Server Apps Home Page in CIDR Notation'), ',')]",
        "clientSingleIP": "[if(endsWith(variables('clientIP')[0], '/32'), substring(variables('clientIP')[0], 0, sub(length(variables('clientIP')[0]), 3)), variables('clientIP')[0])]",
        "newOrExistingVirtualNetwork": "[parameters('Deploy to New or Existing Virtual Network')]",
        "storageAccountName": "[concat('appstorage',uniqueString(resourceGroup().id))]",
        "storageAccountType": "Standard_LRS",
        "privateEndpointName": "storagePrivateEndpoint",
        "fileStorageDnsZone": "[concat('privatelink.file.', environment().suffixes.storage)]",
        "privateEndpointDnsGroupName": "[format('{0}/mydnsgroupname', variables('privateEndpointName'))]",
        "platform": "[parameters('Operating System')]",
        "WindowsOffer": "matlab-web-app-server-byol-windows",
        "WindowsSKU": "matlab-web-app-server-windows-25a",
        "WindowsSKUVersion": "latest",
        "LinuxOffer": "matlab-web-app-server-byol-linux",
        "LinuxSKU": "matlab-web-app-server-linux-25a",
        "LinuxSKUVersion": "latest",
        "enableSSL": "Yes",
        "certFile": "[if(equals(variables('enableSSL'), 'Yes'), parameters('Base64 Encoded SSL Certificate'), 'NONE')]",
        "privateKeyFile": "[if(equals(variables('enableSSL'), 'Yes'), parameters('Base64 Encoded SSL Private Key'), 'NONE')]",
        "windowsCommand": "[concat('powershell -ExecutionPolicy Unrestricted -File initWindows.ps1 -storageAccountName ', variables('storageAccountName'), ' -resourceGroup ', resourceGroup().name, ' -subscriptionID ', subscription().subscriptionId, ' -enableSSL ', variables('enableSSL'), ' -certFile ', variables('certFile'), ' -privateKeyFile ', variables('privateKeyFile'), ' -fqdn ', concat(variables('webappDNSName'),'.',parameters('location'),'.','cloudapp.azure.com'))]",
        "linuxCommand": "[concat('sudo bash ./initLinux.sh -n ', variables('storageAccountName'), ' -f ', resourceGroup().name, ' -k ', subscription().subscriptionId, ' -s ', variables('enableSSL'), ' -c ', variables('certFile'), ' -p ', variables('privateKeyFile'), ' -d ', concat(variables('webappDNSName'),'.',parameters('location'),'.','cloudapp.azure.com'))]",
        "storageEndpointSuffix": "[environment().suffixes.storage]",
        "_artifactsLocation": "[concat('https://', 'mwappdeployment.blob.', variables('storageEndpointSuffix'), '/webappserver-artifacts-25a/')]",
        "_artifactsLocationSasTokenWindows": "?sv=2025-07-05&spr=https&st=2026-07-24T01%3A48%3A30Z&se=2028-11-25T02%3A48%3A00Z&sr=b&sp=r&sig=p2Jtu5nPFbUObvLFWG8Kjr2D5sYRH00x9wDR4vX9BPQ%3D",
        "_artifactsLocationSasTokenLinux": "?sv=2025-07-05&spr=https&st=2026-07-24T01%3A49%3A10Z&se=2028-11-25T02%3A49%3A00Z&sr=b&sp=r&sig=ZjR%2FftQyUBI53w1MiTvhooEPbBi%2Brbz1veg6expAdgk%3D",
        "windowsScriptURL": "[uri(variables('_artifactsLocation'), concat('initWindows.ps1', variables('_artifactsLocationSasTokenWindows')))]",
        "linuxScriptURL": "[uri(variables('_artifactsLocation'), concat('initLinux.sh', variables('_artifactsLocationSasTokenLinux')))]",
        "roleName": "[guid(resourceGroup().id, deployment().name)]",
        "contributor": "[resourceId('Microsoft.Authorization/roleDefinitions/', 'b24988ac-6180-42a0-ab88-20f7382dd24c')]",
        "deployNetworkLicenseManager": "[parameters('Deploy Network License Manager For MATLAB')]",
        "flex-arm-template-link": "https://raw.githubusercontent.com/mathworks-ref-arch/license-manager-for-matlab-on-azure/refs/heads/master/releases/v1/latest/azuredeploy.json",
        "flex-parameters": {
            "instanceType": {
                "value": "Standard_D2s_v3"
            },
            "clientIPAddressList": {
                "value": "[parameters('IP Addresses Permitted to Remote into Server VM in CIDR Notation')]"
            },
            "adminUsername": {
                "value": "[parameters('Username to Remote into Server VM and Network License Manager Web Interface')]"
            },
            "adminPassword": {
                "value": "[parameters('Password to Remote into Server VM and Network License Manager Web Interface')]"
            },
            "existingVnetResourceID": {
                "value": "[variables('virtualNetworkID')]"
            },
            "existingSubnetName": {
                "value": "[variables('subnetName')]"
            },
            "createPublicIPAddress": {
                "value": "[parameters('Assign Public IP Address to VM Hosting MATLAB Web App Server')]"
            }
        },
        "publicDns": "[concat(variables('webappDNSName'), '.', parameters('location'), '.cloudapp.azure.com')]",
        "publicIPWithSSL": "[concat('https://', variables('publicDns'))]",
        "publicDnsWithoutSSL": "[concat('http://', variables('publicDns'))]",
        "privateIPWithSSL": "[concat('https://', variables('serverPrivateIP'))]",
        "privateIPWithoutSSL": "[concat('http://', variables('serverPrivateIP'))]",
        "publicDnsWithSSLAndRedirect": "[concat(variables('publicIPWithSSL'), ':443/webapps/extauth/callback')]",
        "privateIPWithSSLAndRedirect": "[concat(variables('privateIPWithSSL'), ':443/webapps/extauth/callback')]",
        "webAppServerUrl": "[if(equals(variables('usePublicIPAddresses'), 'Yes'), if(equals(variables('enableSSL'), 'Yes'), variables('publicIPWithSSL'), variables('publicDnsWithoutSSL')), if(equals(variables('enableSSL'), 'Yes'), variables('privateIPWithSSL'), variables('privateIPWithoutSSL')))]",
        "webAppServerOidcRedirectUrl": "[if(equals(variables('enableSSL'), 'Yes'), if(equals(variables('usePublicIPAddresses'), 'Yes'), variables('publicDnsWithSSLAndRedirect'), variables('privateIPWithSSLAndRedirect')), 'SSL is not enabled. SSL is required to configure OIDC.')]"
    },
    "resources": [
        {
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2023-07-01",
            "name": "flex-lm-server",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces/',variables('networkInterfaceName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/',variables('virtualNetworkName'))]"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('flex-arm-template-link')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": "[variables('flex-parameters')]"
            },
            "condition": "[equals(variables('deployNetworkLicenseManager'), 'Yes')]"
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2023-09-01",
            "name": "[variables('vmName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]",
                "[resourceId('Microsoft.Network/networkInterfaces/',variables('networkInterfaceName'))]"
            ],
            "identity": {
                "type": "SystemAssigned"
            },
            "plan": {
                "name": "[if(equals(variables('platform'), 'Windows'), variables('WindowsSKU'),  variables('LinuxSKU'))]",
                "publisher": "mathworks-inc",
                "product": "[if(equals(variables('platform'), 'Windows'), variables('WindowsOffer'),  variables('LinuxOffer'))]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('Server VM Instance Size')]"
                },
                "osProfile": {
                    "computerName": "[variables('vmName')]",
                    "adminUsername": "[parameters('Username to Remote into Server VM and Network License Manager Web Interface')]",
                    "adminPassword": "[parameters('Password to Remote into Server VM and Network License Manager Web Interface')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "mathworks-inc",
                        "offer": "[if(equals(variables('platform'), 'Windows'), variables('WindowsOffer'),  variables('LinuxOffer'))]",
                        "sku": "[if(equals(variables('platform'), 'Windows'), variables('WindowsSKU'),  variables('LinuxSKU'))]",
                        "version": "[if(equals(variables('platform'), 'Windows'), variables('WindowsSKUVersion'),  variables('LinuxSKUVersion'))]"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('networkInterfaceName'))]"
                        }
                    ]
                }
            },
            "resources": [
                {
                    "type": "extensions",
                    "apiVersion": "2023-09-01",
                    "name": "config-app",
                    "location": "[parameters('location')]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines/', variables('vmName'))]",
                        "[resourceId('Microsoft.Authorization/roleAssignments/', variables('roleName'))]"
                    ],
                    "tags": {
                        "displayName": "config-app",
                        "provider": "[variables('providerID')]"
                    },
                    "properties": {
                        "publisher": "[if(equals(variables('platform'), 'Windows'), 'Microsoft.Compute', 'Microsoft.Azure.Extensions')]",
                        "type": "[if(equals(variables('platform'), 'Windows'), 'CustomScriptExtension', 'CustomScript')]",
                        "typeHandlerVersion": "[if(equals(variables('platform'), 'Windows'), '1.9', '2.0')]",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "skipDos2Unix": false,
                            "timestamp": 123456789
                        },
                        "protectedSettings": {
                            "commandToExecute": "[if(equals(variables('platform'), 'Windows'), variables('windowsCommand'), variables('linuxCommand') )]",
                            "fileUris": [
                                "[if(equals(variables('platform'), 'Windows'), variables('windowsScriptURL'), variables('linuxScriptURL'))]"
                            ]
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Authorization/roleAssignments",
            "apiVersion": "2022-04-01",
            "name": "[variables('roleName')]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines/', variables('vmName'))]"
            ],
            "properties": {
                "roleDefinitionId": "[variables('contributor')]",
                "principalId": "[reference(resourceId('Microsoft.Compute/virtualMachines', variables('vmName')),'2023-09-01', 'Full').identity.principalId]",
                "scope": "[resourceGroup().id]",
                "principalType": "ServicePrincipal"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2023-04-01",
            "name": "[variables('storageAccountName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
            ],
            "tags": {
                "Description": "Storage account that stores application and config files",
                "provider": "[variables('providerID')]"
            },
            "sku": {
                "name": "[variables('storageAccountType')]"
            },
            "kind": "StorageV2",
            "properties": {
                "minimumTlsVersion": "TLS1_2",
                "allowBlobPublicAccess": false,
                "publicNetworkAccess": "[if(equals(variables('usePublicIPAddresses'), 'Yes'), 'Enabled', 'Disabled')]",
                "networkAcls": {
                    "virtualNetworkRules": "[if(equals(variables('usePublicIPAddresses'), 'Yes'), createArray(createObject('id', variables('subnetRef'))), createArray())]",
                    "ipRules": "[if(equals(variables('usePublicIPAddresses'), 'Yes'), if(equals(variables('clientSingleIP'), variables('adminSingleIP')), createArray(createObject('action', 'Allow', 'value', variables('clientSingleIP'))), createArray(createObject('action', 'Allow', 'value', variables('clientSingleIP')), createObject('action', 'Allow', 'value', variables('adminSingleIP')))), createArray())]",
                    "defaultAction": "Deny"
                }
            }
        },
        {
            "type": "Microsoft.Network/privateEndpoints",
            "apiVersion": "2023-06-01",
            "name": "[variables('privateEndpointName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('VirtualNetworkName'))]"
            ],
            "properties": {
                "subnet": {
                    "id": "[variables('subnetRef')]"
                },
                "privateLinkServiceConnections": [
                    {
                        "name": "[variables('privateEndpointName')]",
                        "properties": {
                            "privateLinkServiceId": "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
                            "groupIds": [
                                "file"
                            ]
                        }
                    }
                ]
            },
            "condition": "[equals(variables('usePublicIPAddresses'), 'No')]"
        },
        {
            "type": "Microsoft.Network/privateDnsZones",
            "apiVersion": "2020-06-01",
            "name": "[variables('fileStorageDnsZone')]",
            "location": "global",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('VirtualNetworkName'))]"
            ],
            "properties": {},
            "condition": "[equals(variables('usePublicIPAddresses'), 'No')]"
        },
        {
            "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
            "apiVersion": "2020-06-01",
            "name": "[format('{0}/{1}', variables('fileStorageDnsZone'), format('{0}-link', variables('fileStorageDnsZone')))]",
            "location": "global",
            "dependsOn": [
                "[resourceId('Microsoft.Network/privateDnsZones', variables('fileStorageDnsZone'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('VirtualNetworkName'))]"
            ],
            "properties": {
                "registrationEnabled": false,
                "virtualNetwork": {
                    "id": "[resourceId(variables('virtualNetworkResourceGroup'),'Microsoft.Network/virtualNetworks', variables('VirtualNetworkName'))]"
                }
            },
            "condition": "[equals(variables('usePublicIPAddresses'), 'No')]"
        },
        {
            "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
            "apiVersion": "2023-06-01",
            "name": "[variables('privateEndpointDnsGroupName')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/privateDnsZones', variables('fileStorageDnsZone'))]",
                "[resourceId('Microsoft.Network/privateEndpoints', variables('privateEndpointName'))]"
            ],
            "properties": {
                "privateDnsZoneConfigs": [
                    {
                        "name": "config1",
                        "properties": {
                            "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('fileStorageDnsZone'))]"
                        }
                    }
                ]
            },
            "condition": "[equals(variables('usePublicIPAddresses'), 'No')]"
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2023-06-01",
            "name": "[variables('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
            ],
            "tags": {
                "Description": "Virtual network for the Web app Server deployment",
                "provider": "[variables('providerID')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetIP')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": "[parameters('location')]"
                                }
                            ]
                        }
                    }
                ]
            },
            "condition": "[equals(variables('newOrExistingVirtualNetwork'), 'new')]"
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-06-01",
            "name": "[variables('networkInterfaceName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses/', variables('serverPublicIP'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
            ],
            "tags": {
                "Description": "Network Interface Card (NIC) for the web app VM",
                "provider": "[variables('providerID')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[variables('serverPrivateIP')]",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": "[if(equals(variables('usePublicIPAddresses'), 'Yes'), variables('publicIPprop1'), json('null'))]",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-06-01",
            "name": "[variables('networkSecurityGroupName')]",
            "location": "[parameters('location')]",
            "tags": {
                "Description": "Network Security Group to control access to VM",
                "provider": "[variables('providerID')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-admin",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefixes": "[variables('adminIP')]",
                            "protocol": "Tcp",
                            "destinationPortRanges": [
                                "22",
                                "3389",
                                "443"
                            ],
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-client",
                        "properties": {
                            "priority": 1001,
                            "sourceAddressPrefixes": "[variables('clientIP')]",
                            "protocol": "Tcp",
                            "destinationPortRanges": [
                                "443"
                            ],
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-06-01",
            "name": "[variables('serverPublicIP')]",
            "location": "[parameters('location')]",
            "tags": {
                "Description": "Public IP Address of the MATLAB Production Server Dashboard",
                "provider": "[variables('providerID')]"
            },
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "[variables('webappDNSName')]"
                }
            },
            "condition": "[equals(variables('usePublicIPAddresses'), 'Yes')]"
        }
    ],
    "outputs": {
        "webAppServerURL": {
            "type": "String",
            "value": "[variables('webAppServerUrl')]"
        },
        "networkLicenseManagerURL": {
            "type": "String",
            "value": "[if(equals(variables('deployNetworkLicenseManager'), 'Yes'), reference('flex-lm-server').outputs.NetworkLicenseManagerAddress.value, 'none')]"
        },
        "webAppsOIDCRedirectURL": {
            "type": "String",
            "value": "[variables('webAppServerOidcRedirectUrl')]"
        }
    }
}
